fixes left alignment issue

--- a/src/containers/Auth/Signup/Signup.module.scss
+++ b/src/containers/Auth/Signup/Signup.module.scss
@@ -35,7 +35,7 @@
 .Auth-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   width: 100%;
 }
 
@@ -46,6 +46,7 @@
   // line-height: 1.1;
   // font-weight: 400;
   margin-bottom: 15px;
+  margin-left: 10px;
   margin-top: clamp(0px, 7.5vh, 96px);
 }
 
